# mangocli

./: .gitignore  README.md  deploy.sh  index.html  mango_cli.py  mangopi_cli.py  pyproject.toml  version.py
